fix: improve legibility of list items in content area

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -785,6 +785,12 @@ hr.post-end {
 
   @include aTag;
 
+  li {
+    line-height: 1.3em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
   figure {
     max-width: 100%;
     height: auto;
